# t5-ort-cpp

./: .gitignore  CMakeLists.txt  cmdline.h  encoderdecoder_infer.cpp  encoderdecoder_infer.h  main.bak  main.cpp  onnx_model_t5.py  readme.md  t5_logger.cpp  t5_logger.h  t5_logger.xh  t5_logger.xpp
